--- a/style.css
+++ b/style.css
@@ -1,7 +1,27 @@
 html, body {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    background-color: #add8e6;
 }
+
+h1 { 
+    font-family: Consolas, monaco, monospace; 
+    font-size: 36px; 
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight: 700; 
+    line-height: 26.4px;
+    color: white;
+}
+
 canvas {
-  display: block;
+    display: block;
+}
+#sketch-div {
+    position: fixed;
+    left: 50%;
+    margin-left: -700px;
+    width: 100%;
+    height: 100%;
 }
